<resources>
    <string name="app_name">Shopping List</string>

    <!-- Common START -->
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_add">Add</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_sorting_options">Sorting options</string>
    <string-array name="dialog_sorting_shopping_lists">
        <item>Oldest -> Newest</item>
        <item>Newest -> Oldest</item>
    </string-array>
    <string-array name="dialog_sorting_shopping_items">
        <item>Oldest -> Newest</item>
        <item>Newest -> Oldest</item>
        <item>Not bought first, Oldest -> Newest</item>
        <item>Not bought first, Newest -> Oldest</item>
        <item>Bought first, Oldest -> Newest</item>
        <item>Bought first, Newest -> Oldest</item>
    </string-array>
    <!-- Common END -->

    <!-- Active Shopping Lists START -->
    <string name="title_active_shopping_lists">Current lists</string>
    <string name="dialog_title_add_list">Add list</string>
    <string name="dialog_title_edit_list">Edit list</string>
    <string name="dialog_list_name">List name</string>
    <string-array name="active_shopping_list_options">
        <item>Edit</item>
        <item>Archive</item>
        <item>Remove</item>
    </string-array>
    <string name="go_to_archive">Archive</string>
    <!-- Active Shopping Lists END -->

    <!-- Archived Shopping Lists START -->
    <string name="title_archived_shopping_lists">Archived lists</string>
    <string-array name="archived_shopping_list_options">
        <item>Unarchive</item>
        <item>Remove</item>
    </string-array>
    <!-- Archived Shopping Lists END -->

    <!-- Shopping Items START -->
    <string name="dialog_title_add_item">Add item</string>
    <string name="dialog_item_name">Item name</string>
    <string name="dialog_title_edit_item">Edit item</string>
    <string name="archived_suffix">\u00A0(Archived)</string>
    <string-array name="shopping_item_options">
        <item>Edit</item>
        <item>Remove</item>
    </string-array>
    <!-- Shopping Items END -->

</resources>
