<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/default_margin"
    android:paddingRight="@dimen/default_margin"
    android:paddingTop="@dimen/default_margin">

    <TextView
        style="@style/Base.DialogWindowTitle.AppCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title_add_list"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/list_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_list_name"
            android:maxLines="1"
            android:singleLine="true"
            android:textCursorDrawable="@null"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <Button
            android:id="@+id/cancel_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_cancel"/>

        <Button
            android:id="@+id/add_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/dialog_add"/>

    </LinearLayout>

</LinearLayout>